# ears

./: .gitignore  LICENSE  README.md  mise.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: index.html  live.html  live.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  live.rs  main.rs  models.rs  state.rs  transcribe.rs  tray.rs
