[package]
name = "ears"
version = "0.1.0"
edition = "2021"

[lib]
name = "ears_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

cpal = "0.15"
whisper-rs = { version = "0.16", features = ["cuda"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
rubato = "0.16"
anyhow = "1"

[profile.release]
strip = true
opt-level = 3
lto = true
