[package]
name = "ears"
version = "0.1.0"
edition = "2021"

[lib]
name = "ears_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

cpal = "0.17"
reqwest = { version = "0.13", features = ["multipart", "json"] }
rubato = { version = "3.0", features = ["fft_resampler"] }
anyhow = "1"
enigo = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.6", features = ["wayland", "x11rb"] }

[profile.release]
strip = true
opt-level = 3
lto = true
